<resources>
    <string name="app_name">PosTED</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    //
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="laptops">Laptops</string>
    <string name="phones">Phones</string>
    <string name="add_product">Add product</string>
    <string name="sign_out">Sign out</string>
    <string name="register_question">Do you want to register?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="laptop_model">Laptop Model: </string>
    <string name="price">Price: </string>
    <string name="ram">RAM: </string>
    <string name="hdd">HDD: </string>
    <string name="processor">Processor: </string>
    <string name="video_card">Video card: </string>
    <string name="display_size">Display size: </string>
    <string name="currency">Currency: </string>
    <string name="user_order">User ordered the product: </string>
    <string name="browse">browse</string>
    <string name="camera">camera</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="coming_soon">Coming soon</string>
    <string name="old_password">Old pass</string>
    <string name="new_password">New pass</string>
    <string name="update_password">Update pass</string>
    <string name="posted">PosTED</string>
    <string name="posted_email">office.posted@gmail.com</string>
    <string name="email_subject">subject of email</string>
    <string name="email_body">body of email</string>
    <string name="wifi_dialog_title">No internet connection!</string>
    <string name="wifi_dialog_message">This App needs Internet connection to update the database!</string>
    <string name="wifi_dialog_positive_button">Turn on WiFi</string>
    <string name="wifi_dialog_neutral_button">Work Offline</string>
    <string name="preview_added_products">Preview added products</string>
    <string name="preview_removed_products">Preview removed products</string>
    <string name="sync">Sync</string>
    <string name="no_items">No items</string>
      <string name="about_us">Welcome to PosTED! Our place of sale app is the ideal place for you to satisfy your teck needs!\n\nRegards from our mobile development team: Todor, Elica and Dimana (hence the TED part).
          \n\nHere is where you can find us:</string>
    <string name="checkout">Checkout</string>
    <string name="orders">Orders</string>
    <string name="added_laptop">Laptop added to ADD list</string>
    <string name="error_empty_laptop">Laptop model cannot be empty</string>
    <string name="error_empty_hdd">HDD cannot be empty</string>
    <string name="error_empty_display">Display size cannot be empty</string>
    <string name="error_empty_processor">Processor cannot be empty</string>
    <string name="error_empty_video_card">Video card cannot be empty</string>
    <string name="error_empty_currency">Currency cannot be empty</string>
    <string name="error_empty_price">Price cannot be empty</string>
    <string name="send_us_email">Send us email</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="please_wait">Please wait…</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="remove_from_db">Remove from database</string>
    <string name="laptop_added_to_cart">Laptop added to cart</string>
    <string name="laptop_added_to_remove_list">Laptop added to REMOVE list</string>
    <string name="posted_office">PosTED office</string>
    <string name="password_updated">Password updated</string>
    <string name="password_short">Password too short</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="order_successfully_sent">Orders successfully sent</string>
    <string name="back_press">Press again to exit</string>
</resources>
