<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/admin_nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/admin_nav_laptops"
            android:icon="@drawable/laptop"
            android:title="@string/laptops" />
        <item
            android:id="@+id/admin_nav_phones"
            android:icon="@drawable/phone"
            android:title="@string/phones" />
        <item
            android:id="@+id/admin_nav_addProduct"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/add_product" />
        <item
            android:id="@+id/admin_nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/admin_nav_signOut"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out" />
    </group>



</menu>
