<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:background="@drawable/fragment_design">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_row_design"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp">

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_username"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/old_password"
            android:id="@+id/profile_old_pass"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/new_password"
            android:id="@+id/profile_new_pass"
            android:layout_margin="5dp" />

        <Button
            android:text="@string/update_password"
            android:layout_width="match_parent"
            android:background="@drawable/button_design"
            android:layout_height="wrap_content"
            android:id="@+id/profile_update_pass"
            android:layout_margin="5dp" />
    </LinearLayout>
</RelativeLayout>
