<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/cardView_text_margin"
    android:layout_marginLeft="@dimen/cardView_text_margin"
    android:layout_marginRight="@dimen/cardView_text_margin"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5sp"
    card_view:cardUseCompatPadding="true"

    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:background="@drawable/item_row_design"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/cardView_text_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/laptop_model"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/model_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ram"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/ram_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hdd"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/hdd_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/processor"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/processor_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/video_card"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/video_card_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/display_size"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/display_size_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_margin="@dimen/cardView_text_margin"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/price_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                    <TextView
                        android:id="@+id/currency_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardView_text_margin"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_order"
                    android:layout_margin="@dimen/cardView_text_margin"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/user_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/cardView_text_margin"/>

            </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>



